--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -67,14 +67,12 @@ file appears. When you are done, hit ctrl-C and log off
 # exit
 
 Should you want to understand/modify/build the upload-to-rbn utility, 
-you may find them on https://github.com/bjornekelund
+you may find it on https://github.com/bjornekelund
 
 To deinstall the additions and return to only reporting spots to pskreporter, do:
 
-# /root/apps/stop.sh
 # cd ~/upload-ft8-to-rbn-2
 # ./deinstall.sh
-
 
 To update the additions to the latest version do:
 
